[gd_scene load_steps=2 format=3 uid="uid://dmyks83qrm20b"]

[ext_resource type="Script" path="res://scripts/EquipmentSelection.gd" id="1_6k5vr"]

[node name="EquipmentSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_6k5vr")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Header" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Equipment Shop"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Gold: 100"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Content" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EquipmentCategories" type="HBoxContainer" parent="VBoxContainer/Content"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/Content"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="EquipmentList" type="VBoxContainer" parent="VBoxContainer/Content/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EquipmentLabel" type="Label" parent="VBoxContainer/Content/HBoxContainer/EquipmentList"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Available Equipment"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Content/HBoxContainer/EquipmentList"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemList" type="VBoxContainer" parent="VBoxContainer/Content/HBoxContainer/EquipmentList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/Content/HBoxContainer"]
layout_mode = 2

[node name="ItemDetails" type="VBoxContainer" parent="VBoxContainer/Content/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DetailsLabel" type="Label" parent="VBoxContainer/Content/HBoxContainer/ItemDetails"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Item Details"

[node name="Details" type="Label" parent="VBoxContainer/Content/HBoxContainer/ItemDetails"]
layout_mode = 2
size_flags_vertical = 3
text = "Select an item to see details"
vertical_alignment = 1
autowrap_mode = 2

[node name="BuyButton" type="Button" parent="VBoxContainer/Content/HBoxContainer/ItemDetails"]
layout_mode = 2
text = "Select Item"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/Content/HBoxContainer"]
layout_mode = 2

[node name="InventoryPanel" type="VBoxContainer" parent="VBoxContainer/Content/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InventoryLabel" type="Label" parent="VBoxContainer/Content/HBoxContainer/InventoryPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Your Inventory"

[node name="ScrollContainer2" type="ScrollContainer" parent="VBoxContainer/Content/HBoxContainer/InventoryPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="InventoryList" type="VBoxContainer" parent="VBoxContainer/Content/HBoxContainer/InventoryPanel/ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WeightLabel" type="Label" parent="VBoxContainer/Content/HBoxContainer/InventoryPanel"]
layout_mode = 2
text = "Weight: 0/20 lbs"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonSection" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonSection"]
layout_mode = 2
text = "Return to Tavern"